# s3-downloader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG  LICENSE  MANIFEST.in  README.md  gen_docs.sh  pre_commit.sh  pyproject.toml  release_notes.rst  requirements.txt  setup.cfg  setup.py  version.py
.github/workflows/: none.yml  python-publish.yml
doc_generator/: conf.py  index.rst
docs/: README.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.rst.txt
docs/_static/: basic.css
docs_gen/: conf.py  index.rst
s3/: __init__.py  display.py  dumper.py  exceptions.py  logger.py  progress.py  squire.py
